--- a/src/assets/styles/index.css
+++ b/src/assets/styles/index.css
@@ -1,4 +1,5 @@
 @import "tailwindcss";
+@import '@fortawesome/fontawesome-free/css/all.min.css';
 
 
 /* Syaqa - French Version Styles */
@@ -922,7 +923,7 @@ section {
 .main-footer {
   background-color: var(--bg-dark);
   color: white;
-  padding: 80px 0 30px;
+  padding: 95px 0 30px;
 }
 
 .footer-content {
